# commander-suico

./: README.md  pyproject.toml
src/: calculadoraPontos.py  geradorRodada.py  main.py
src/class/: mesaClass.py
src/commander_suico/: __main__.py
src/commander_suico/api/: jogadorController.py
src/commander_suico/model/: jogador.py  mesa.py
src/commander_suico/service/: desempates.py  emparelhamento.py
src/model/: jogadorClass.py
src/service/: emparelhamento.py
